// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media.ts: Insert media single having dimensions 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "center",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "collection": "TestCollection",
            "height": 1500,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 2265,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Insert media single unknown dimensions 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "center",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "collection": "TestCollection",
            "height": 200,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 250,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
